<resources>
    <string name="app_name" translatable="false">China Daily &#045; News</string>

    <string name="copyright" translatable="false">Copyright © 2019 China Daily Hong Kong Limited.\n All Rights Reserved</string>

    <string name="update_title" translatable="false">China Daily &#045; News Update</string>  <!--  Information -->
    <string name="update_r_bt" translatable="false">Update now</string>
    <string name="update_l_bt" translatable="false">Not now</string>

    <string name="page1" translatable="false">News</string>
    <string name="page2" translatable="false">Focus</string>
    <string name="page3" translatable="false">Video</string>
    <string name="page4" translatable="false">Me</string>
    <string name="page5" translatable="false">ePaper</string>


    <string name="my_favorite" translatable="false">My Favorites</string>
    <string name="my_fb" translatable="false">Facebook</string>
    <string name="my_twt" translatable="false">Twitter</string>
    <string name="my_feed" translatable="false">Feedback</string>
    <string name="my_setting" translatable="false">Settings</string>

    <string name="control_about">About us</string>
    <string name="accessibility_statement">Accessibility statement</string>

    <string name="control_cache">Clear cache</string>
    <string name="control_terms_of_use">Privacy Policy</string>
    <string name="control_notify_push">Notification push</string>
    <string name="control_update">Version update</string>

    <string name="facebook_app_id">1651206281797010</string>


    <string name="VideoView_error_text_invalid_progressive_playback" translatable="false">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown" translatable="false">Unknown</string>
    <string name="VideoView_error_button" translatable="false">OK</string>

    <string name="VideoView_ar_aspect_fit_parent" translatable="false">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent" translatable="false">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content" translatable="false">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent" translatable="false">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent" translatable="false">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent" translatable="false">4:3 / Fit parent</string>

    <string name="VideoView_render_none" translatable="false">Render: None</string>
    <string name="VideoView_render_surface_view" translatable="false">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view" translatable="false">Render: TextureView</string>

    <string name="VideoView_player_AndroidMediaPlayer" translatable="false">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer" translatable="false">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer" translatable="false">Player: IjkExoMediaPlayer</string>

    <string name="not_support" translatable="false">The player does not support this device</string>

    <string name="N_A" translatable="false">N/A</string>
    <string name="close" translatable="false">Close</string>
    <string name="vdec" translatable="false">vdec</string>
    <string name="fps" translatable="false">fps</string>
    <string name="v_cache" translatable="false">v-cache</string>
    <string name="a_cache" translatable="false">a-cache</string>

    <string name="media_information" translatable="false">Media Information</string>
    <string name="mi_player" translatable="false">Player</string>
    <string name="mi_media" translatable="false">Media</string>
    <string name="mi_profile_level" translatable="false">Profile level</string>
    <string name="mi_pixel_format" translatable="false">Pixel format</string>
    <string name="mi_resolution" translatable="false">Resolution</string>
    <string name="mi_length" translatable="false">Length</string>
    <string name="mi_stream_fmt1" translatable="false">Stream #%d</string>
    <string name="mi_type" translatable="false">Type</string>
    <string name="mi_language" translatable="false">Language</string>
    <string name="mi_codec" translatable="false">Codec</string>
    <string name="mi_frame_rate" translatable="false">Frame rate</string>
    <string name="mi_bit_rate" translatable="false">Bit rate</string>
    <string name="mi_sample_rate" translatable="false">Sample rate</string>
    <string name="mi_channels" translatable="false">Channels</string>
    <string name="mi__selected_video_track" translatable="false">*</string>
    <string name="mi__selected_audio_track" translatable="false">*</string>

    <string name="TrackType_video" translatable="false">Video</string>
    <string name="TrackType_audio" translatable="false">Audio</string>
    <string name="TrackType_subtitle" translatable="false">Subtitle</string>
    <string name="TrackType_timedtext" translatable="false">Timed text</string>
    <string name="TrackType_metadata" translatable="false">Meta data</string>
    <string name="TrackType_unknown" translatable="false">Unknown</string>


    <string name="net_msg2">The current network environment is WIFI.</string>
    <string name="net_msg8">The current network environment is mobile network.</string>
    <string name="net_msg3">The network is disconnected.</string>
    <string name="net_msg4">No network connection.</string>
    <string name="net_msg5">You are using data to display video, and this may cause high extra costs.</string>
    <string name="net_msg6">An error occurred, please try again later</string>
    <string name="net_try">Try again</string>
    <string name="video_continue">continue</string>

    <!--   Load fail    -->
    <string name="load_fail">Load fail</string>
    <string name="net_error">Connection error</string>
    <string name="net_retry">Retry</string>

    <string name="loading_empty_text" translatable="false">Click on the screen to reload</string>

    <!-- LoadingMoreFooter    修改XRefresh里面的加载中文字-->


    <string name="about_l" translatable="false">Launched in 1997, the China Daily Hong Kong Edition offers a unique local perspective that has become essential reading for decision-makers, including HKSAR government officials, CEOs and senior executives, scholars and academics in Hong Kong.</string>
    <string name="about_a" translatable="false">As Hong Kong maintains its critical role as the gateway to the Chinese mainland, China Daily Hong Kong Edition offers a ringside view of the dynamic economic and social development underway on the Chinese mainland, both in print and in digital form. The newspaper connects local readers to the Chinese mainland, with first-hand, critical insight that cannot be duplicated by other local news media. A roster of Hong Kong opinion leaders and freelance writers add their contributions, helping to ensure that the newspaper remains closely connected to the local community.</string>
    <string name="about_f" translatable="false">Focus Hong Kong, published every Friday, is a brand new weekly edition specially designed for readers in the city, in addition to the daily fare of news and views.</string>
    <string name="about_t" translatable="false">The new offering covers a wide range of subjects, from business and the economy to social and environmental issues, among many others. It carries incisive and insightful commentaries on current affairs and issues that are important to Hong Kong.</string>
    <string name="about_lr" translatable="false">Launched on December 10, 2010, China Daily Asia Weekly is a 32-page color tabloid published every Friday, featuring news, views and analysis of China and the region. It is printed and distributed across Asia, including Australia, India, United Arab Emirates, Japan, Republic of Korea, Nepal, Singapore, Malaysia, Thailand, Indonesia, Myanmar and the Philippines; as well as Beijing, Hong Kong and Macau. Apart from China Daily’s vast resources, a worldwide network of correspondents, commentators and photographers, Asia Weekly has a dedicated pool of professional writers with proven credentials across the region.</string>
    <string name="about_te" translatable="false">The editorial team strives for the highest editorial standards while ensuring that its reports are timely, objective and balanced.</string>
    <string name="about_as" translatable="false">As a member of Asia News Network (ANN), China Daily Asia Weekly also is able to glean some of the best articles and reports published in 23 newspapers, including The Nation of Thailand, The Star of Malaysia, The Jakarta Post of Indonesia, The Straits Times of Singapore, The Statesman of India, The Korean Herald of Republic of Korea, and Daily Yomiuri of Japan, etc.</string>
    <string name="about_at" translatable="false">At the end of 2013, a leading US-based media-auditing organization BPA Worldwide has confirmed China Daily Asia Weekly’s status as one of the largest-circulated weekly publications in Asia. It is a significant achievement and represents a major milestone for Asia Weekly.  </string>
    <string name="about_tc" translatable="false">The China Daily Asia Leadership Roundtable was created as a result of the success of the China Daily CEO Roundtable (established in 2004, \n http://ceoroundtable.chinadaily.com.cn) and with the support of the Asia News Network, an alliance of 21 leading newspapers from 19 Asian countries and regions \n (http://www.asianewsnet.net).</string>
    <string name="about_tcd" translatable="false">The China Daily Asia Leadership Roundtable is a by-invitation network of movers and shakers in Asia providing platforms for focused dialogue, issue investigation, and possible collective action on strategic issues relating to economic, business and social development in Asia. Our aim is to enhance communication and increase mutual understanding between China, other Asian countries and Western countries.</string>

    <string name="load">download</string>
    <string name="pausing">pausing…</string>
    <string name="pause">pause</string>
    <string name="loading">loading…</string>
    <string name="retry">retry</string>
    <string name="loadFailed">failed</string>
    <string name="done">done</string>
    <string name="loadDone">already done</string>
    <string name="install">finish to install</string>

    <string name="discover_new_version">Discover new version</string>
    <string name="update">Update</string>
    <string name="install_the_application">Install</string>
</resources>
