<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    app:divider="@drawable/shape_line"
    app:showDividers="middle">

    <include layout="@layout/base_title_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv1_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingLeft="12dp"
                android:paddingTop="15dp"
                android:text="China Daily Hong Kong"
                android:textColor="#161616"
                android:textSize="21.1sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv1_content1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/about_l" />

            <TextView
                android:id="@+id/tv1_content2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/about_a" />

            <TextView
                android:id="@+id/tv1_content3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/about_f" />

            <TextView
                android:id="@+id/tv1_content4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/about_t" />

            <TextView
                android:id="@+id/tv2_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingLeft="12dp"
                android:paddingTop="15dp"
                android:text="China Daily Asia Weekly"
                android:textColor="#161616"
                android:textSize="21.1sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv2_content1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/about_lr" />

            <TextView
                android:id="@+id/tv2_content2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/about_te" />

            <TextView
                android:id="@+id/tv2_content3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/about_as" />

            <TextView
                android:id="@+id/tv2_content4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/about_at" />

            <TextView
                android:id="@+id/tv3_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingLeft="12dp"
                android:paddingTop="15dp"
                android:text="China Daily Asia Leadership Roundtable"
                android:textColor="#161616"
                android:textSize="21.1sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv3_content1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/about_tc" />

            <TextView
                android:id="@+id/tv3_content2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/about_tcd" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>